--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,25 @@
 	// Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+		// {
+		// 	"name": "(lldb) Запустить",
+		// 	"type": "cppdbg",
+		// 	"request": "launch",
+		// 	"program": "${workspaceFolder}/asm",
+		// 	"args": ["./other/wasp.s"],
+		// 	"stopAtEntry": true,
+		// 	"cwd": "${workspaceFolder}",
+		// 	"environment": [],
+		// 	"externalConsole": false,
+		// 	"MIMode": "lldb"
+		// }
 		{
 			"name": "(lldb) Запустить",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/asm",
-			"args": ["./test/kalle.s"],
+			"program": "${workspaceFolder}/corewar",
+			"args": ["-l", "31", "./other/resources/champs/Gagnant.cor", "./other/resources/champs/slider2.cor"],
+			// "args": ["-l", "30", "./test/wasp.cor"],
 			"stopAtEntry": true,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
